# zeta-voice

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .libraries-whitelist.txt  .license-whitelist.txt  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  Makefile  README.md  THIRD_PARTY_LICENSES.md  apis.md  check_licenses.sh  docker-compose.yml  guideline.md  package-lock.json  package.json  pyproject.toml  test.md
config/: elevenlabs_voices.json  intro_messages.json
config/conversation_config/: faqs_with_responses.csv  objections_with_responses.csv  repetition_with_responses.csv  rule_based_english_responses.csv  slots_with_responses.csv  voicemail_responses.csv
config/elevenlabs_voice_settings/: Alex.json  Alex_fillers.json  Eve.json  Eve_fillers.json  Josh.json  Luke.json  Maria.json  Maria_fillers.json  default.json  professional.json
config/prompts/: booking_flow_prompt.j2  intent_classification_prompt.j2  objection_classification_prompt.j2  question_classification_prompt.j2  rephrase_prompt.j2  voicemail_detection_prompt.j2
deploy/: nginx.conf
docker/: .dockerignore  Dockerfile  Dockerfile.terraform
scripts/: create_blob_container.py  delete_blob_container.py  download_twilio_recordings.py  generate_all_recordings.py  generate_all_recordings_locally.py  generate_single_recording.py  latency_test_dynamics.py  run_terminal_conversation.py  save_chatbot_response_recordings.py  save_chatbot_response_recordings_locally.py
src/carriage_services/: __init__.py  main.py  paths.py  settings.py
src/carriage_services/audio/: silence_remover.py
src/carriage_services/auth/: __init__.py  dependencies.py
src/carriage_services/calendar/: __init__.py  models.py  provider.py
src/carriage_services/conversation/: calendar_api.py  context.py  flows.py  memory.py  models.py  rephrase.py  rule_based_english_classifier.py  runner.py  state.py  understanding.py
src/carriage_services/database/: __init__.py  actions.py  models.py  schema.py  session.py
src/carriage_services/intent_classification/: intent_classification.py
src/carriage_services/interface/: base.py  telephony.py  terminal.py
src/carriage_services/orchestration/: __init__.py  telephony_orchestrator.py
src/carriage_services/question_classification/: question_classification.py
src/carriage_services/routes/: admin_router.py  app_router.py
src/carriage_services/tts/: elevenlabs_tts.py  openai_tts.py  tts.py
src/carriage_services/utils/: __init__.py  anonymization.py  azure.py  enums.py  handle_errors.py  helpers.py  profiling.py  recordings_storage.py  twilio_downloader.py
src/carriage_services/voicemail_detection/: voicemail_detection.py
src/zeta_voice/: main.py  settings.py
src/zeta_voice/conversation/: flows.py
src/zeta_voice/routes/: lead_extraction.py
src/zeta_voice/templates/: lead_call.html
tests/: conftest.py  test_intent_classification.py  test_voicemail_detection.py
tests/e2e/: test_conversation.py  test_conversation_dynamics.py  test_conversation_dynamics_mocked.py  test_conversation_mocked.py
tests/promptfoo/: promptfooconfig.yaml
tests/promptfoo/harness/: promptfoo_test_harness.py
tests/unit/: test_address_conversion.py  test_booking_flow_lead_status.py  test_neutralize_phrases.py  test_voicemail_detection_rule_based.py
tf/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
